{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "player",
            "id": "60265a92-2f09-415d-bca1-7dbc7904b381",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "88e59fb9-8a90-482e-bae9-f8ed632f1f0e",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "774b0a72-687f-4e3b-9ce9-28319cf83003",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "50837c67-f478-470c-ac9e-13e89626babf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashAttack",
                    "type": "Button",
                    "id": "cd3c25e5-edf5-44fe-8a7d-9be31f559dcb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MultiplierAttack",
                    "type": "Button",
                    "id": "4ae10d83-d084-4c98-81b8-2e06722181cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00e01f58-e8b0-43db-9bbd-a453e09f37dd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "781d9d98-b5f2-4286-9e8a-2e78ac5be07d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5316bed0-8642-4693-ad19-7c5c263de92b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00cf5a1e-418a-4b0b-b5fb-2a4d9d72fbd7",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4673c2d2-d8d7-44bf-8076-e9e0b9c493c5",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiplierAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}